# ai-copilot-workspace

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  start-all.sh  tsconfig.base.json
apps/agent-bank/: CLERK_ORGANIZATION_SETUP.md
apps/agent-bank/src/: middleware.ts
apps/agent-bank/src/app/: globals.css  layout.tsx  page.tsx
apps/agent-bank/src/config/: config-manager.ts  pages.ts
apps/agent-bank/src/contexts/: theme-context.tsx
apps/agno-agents/: .env.example  AGENT_ARCHITECTURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  main.py  main.py.backup  pyproject.toml  requirements.txt
apps/agno-agents/auth/: __init__.py  clerk_config.py  clerk_provider.py
apps/agno-agents/shared/: __init__.py  agent_base.py  base_agent.py  model_factory.py  rate_limiter.py  storage_config.py  workspace_manager.py  workspace_service.py
apps/ai-chat-api/: env.template  main.py  requirements.txt  setup.py
apps/ai-chat-api/middleware/: auth.py
apps/ai-chat-api/models/: attachments.py  chat.py
apps/ai-chat-api/routers/: attachments.py  chat.py  conversations.py  models.py
apps/ai-chat-api/services/: ai_models.py  attachment_service.py  dynamodb.py  litellm_service.py
apps/auth-service/: README.md  clerk_idp_manager.py  clerk_provider.py  main.py  organization_manager.py  pyproject.toml  requirements.txt
apps/core-api/: README.md  main.py  pyproject.toml  requirements.txt
apps/crewai-agents/: main.py  pyproject.toml  research_langgraph.py
apps/mastra-dev/: package.json  tsconfig.json
apps/mastra-dev/src/mastra/: index.ts
apps/python-app/: README.md  pyproject.toml
apps/python-app/python_app/: main.py
apps/simple-agent-ui/: package.json
apps/simple-agent-ui/public/: test-backend.html
apps/simple-agent-ui/src/: middleware.ts
docs/database-design/: PROJECT_SUMMARY.md  README.md
docs/database-design/qa-sessions/: 01-agent-architecture.md  02-chat-context.md  03-embeddings-vector-search.md  04-database-schema.md  05-implementation-plan.md
docs/project-restructure/: ENHANCED_ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  RESTRUCTURE_SUMMARY.md
(+140 files in other folders)
