[project]
name = "python-app"
version = "0.1.0"
description = "Simple Python app in monorepo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
python_app = "python_app.main:main"

